# JNIStudy

JNI_HelloWorldFromCpp/: settings.gradle
JNI_HelloWorldFromCpp/app/: build.gradle
JNI_HelloWorldFromCpp/app/src/androidTest/java/com/dj/jnistudy/: ExampleInstrumentedTest.java
JNI_HelloWorldFromCpp/app/src/main/: AndroidManifest.xml
JNI_HelloWorldFromCpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNI_HelloWorldFromCpp/app/src/main/cpp/people/: People.cpp  People.h
JNI_HelloWorldFromCpp/app/src/main/java/com/dj/jnistudy/: MainActivity.java
JNI_HelloWorldFromCpp/app/src/main/res/values/: strings.xml
JNI_HelloWorldFromCpp/app/src/test/java/com/dj/jnistudy/: ExampleUnitTest.java
JNI_HelloWorldFromCpp/gradle/wrapper/: gradle-wrapper.properties
